Update after JS Fundamentals 2 lesson

--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -21,6 +21,11 @@
         <li><a href="#2023-10">October 2023</a></li>
     </ul>
     <h2 id="2023-10">October 2023</h2>
+    <h3>2023.10.13, Friday</h3>
+    <p>Working on <a href="https://www.theodinproject.com/lessons/foundations-fundamentals-part-2">JS Fundamentals Part 2</a> today.</p>
+    <p>I completed the lesson, but am a little frustrated. The coding, so far, is pretty self-explanatory. But it's a matter of knowing what you want the code to do, and that's where I'm lost. I will continue, because the lessons are helpful and producing results. But I'm still frustrated. Did the assignment on <a href="https://www.replit.com">replit.com</a>. Not really sure of the usage of that site, but I'm sure I'll find out.</p>
+    <p>I have other things to do today, but I might work on the <a href="https://www.theodinproject.com/lesson/foundations-javascript-developer-tools">next lesson</a> today, since it covers the Chrome Developer Tools, and I've already covered some of it in the CSS lessons. It seens like an easy lesson, compared to the one I just completed.</p>
+    <hr>
     <h3>2023.10.12, Thursday</h3>
     <p>Tuesday was a busy day, but I did start the <a href="https://www.theodinproject.com/lessons/foundations-fundamentals-part-1">Fundamentals Part 1</a> of the JavaScript Module on The Odin Project. I didn't get very far because it was late in the day.</p>
     <p>I'm making more progress with it today, and I had some inspiration last night, so I'm going to try a few things before I wrap it up for today. Here are <a href="javascript.html">my notes</a> regarding JavaScript.</p>
