--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -14,7 +14,28 @@
         <a class="menu" href="todo.html">To Dos</a>
         <a class="menu" href="course-log.html">My Course Log</a>
     </nav>
+    <script>
+        const string = "The revolution will not be televised.";
+        const badString = string;
+console.log(badString);
+const single = 'single quotes';
+const double = "double quotes";
+const backticks = `backtick quotes`;
+console.log(single);
+console.log(double);
+console.log(backticks);
+
+const name = "Mandi";
+const greeting = `Hello, ${name}.`;
+console.log(greeting);
+
+const two = " How are you?"
+const joined = `${greeting}${two}`
+console.log(joined);
+
+    </script>
     <h1>Javascript Notes</h1>
+    <a style="text-align:center" href="../scripts/js-sample.js">Samples</a>
     <h2>Basics</h2>
     <ul>
         <li><code>let</code> allows you to label a variable that can be changed throughout the course of the script, and probably allows input from the user (assuming I will learn about this in future lessons)</li>
@@ -24,14 +45,14 @@
     <p>Example:<pre>1 let message = "Hello";
 2 alert(message);
     </pre></p>
-    <button class="menu" onclick="hello()">Click Me!</button>
+    <button class="menu" onclick="hello()" style="display: inline; margin: 0 0 0 150px;">Click Me!</button>
     <script>
         function hello() {
             let message = "Hello! :)";
             alert(message);
         }
     </script>
-    <button class="menu" onclick="alert('Good morning!')">Or, Click Me!</button>
+    <button class="menu" onclick="alert('Good morning!')" style="display: inline; margin: 0 50px;">Or, Click Me!</button>
     <ul>
         <li>As expected, coding with numbers works as expected. The only exception is when using '+'. The addition function only works when combing numbers with numbers or strings with strings. If you try to combine, you will get a string result. This is because '+' is used for both number operations and string operations (concatenate).</li>
         <li>All other operations will try to convert strings to numbers to complete them.</li>
@@ -51,6 +72,53 @@ let c = percentage;</pre>
     let percentage = actual / max;
     let c = percentage;
    </script>
+   <h2>Types of Data</h2>
+   <ol>
+    <li>Numbers - pretty self-explanatory; they are "safe" in JS</li>
+    <ul>
+        <li>Infinity & -Infinity</li>
+        <li>NaN (not a number) - NaN in any operation will always return NaN (except <code>NaN ** 0</code> ("not a number" to the 0 power = 1)</li>
+    </ul>
+    <li>BigInt (big integers) - used to represent numbers larger than &plusmn2^53-1 (or 9007199254740991); it's created by appending <code>n</code> to an integer</li>
+    <li>Strings - items surrounded by quotes</li>
+    <ul>
+        <li>Double & single quotes are used for exact statements</li>
+        <li>Backtick quotes (<code>`Hello`)</code>are extended functionality quotes and can be used to embed variables and expression into a string by wrapping the in <code>${}</code>. The formula is calculated and the result becomes part of the string. This only happens in backticks.</li>
+    </ul>
+    <li>Boolean - used for storing true/false results, like if data points were checked or comparing two numbers</li>
+    <li>The "null" value - used to represent unknown values</li>
+    <li>The "undefined" value - used to represent values not assigned</li>
+    <li>Objects - used to store collections of data and more complex entities</li>
+    <li>Symbols - used with Objects to create unique identifiers for them</li>
+    <li>The typeof operator - returns the type of operator in a statement</li>
+   </ol>
+   <p>What is the output of the following script?</p>
+<pre>let name = "Ilya";
+alert( `hello ${1}`);
+alert( `hello ${"name"}`);
+alert( `hello ${name}`);</pre>
+<button class="menu" onclick="test()" style="display: inline; margin: 0 0 0 150px;">Try Me!</button>
+<script>
+    function test() {
+        let name = "Ilya";
+        alert( `hello ${1}`);
+        alert( `hello ${"name"}`);
+        alert( `hello ${name}`); 
+    }
+</script>
+
+<button class="menu" style="display: inline; margin: 0 0 0 150px">Press me</button>
+<div id="greeting"></div>
+<script>const button = document.querySelector("button");
+
+    function greet() {
+      const name = window.prompt("What is your name?");
+      const greeting = document.querySelector("#greeting");
+      greeting.textContent = `Hello ${name}, nice to see you!`;
+    }
+    
+    button.addEventListener("click", greet);</script>
+
     <a class="menu" href="../index.html">Back to Index</a>
     </body>
 </html>
