--- a/pages/resources.html
+++ b/pages/resources.html
@@ -47,6 +47,10 @@
             <li><a href="https://www.w3.org/TR/css-flexbox-1/#flex-common">CSS Flexible Box Layout Module Level 1</a> - very technical explanation of the flexbox usage</li>
 	    <li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">CSS Tricks | A Guide to FlexBox</a></li>
         </ul>
+    <h2>JavaScript References</h2>
+        <ul>
+            <li><a href="https://www.javascript.info">JavaScript Info</a> - lessons on JavaScript</li>
+        </ul>
     <h1>Other Project Sharing Services</h1>
     <p>Places to share source files, besides <a href="https://www.github.com">GitHub</a>.</p>
     <ul>
