--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -17,10 +17,17 @@
     <h1>My Odin Project Course Log</h1>
     <ul class="toc">
         <li>December 2023</li>
-        <li>November 2023</li>
+        <li>January 2024</li>
         <li><a href="#2023-10">October 2023</a></li>
     </ul>
+    <h2 id="2024-02">February 2024</h2>
+    <h3>2024.02.05, Monday</h3>
+    <p>I got distracted for awhile. Tried to focus on another career path and it hasn't panned out. Continuing my progress on The Odin Project - <a href = "https://www.theodinproject.com/lessons/foundations-fundamentals-part-3">Fundamentals Part 3</a>.</p>
+    <p>In the meantime, I did set up a Git-hosted TiddlyWiki for <a href = "https://mandi628.github.io/family-recipes">our family recipes</a>, and <a href = "https://mandi628.github.io/my-bullet-journal">a bullet journal</a>.</p>
     <h2 id="2023-10">October 2023</h2>
+    <h3>2023.10.14, Saturday</h3>
+    <p>It was not in my plan today, but I ended up creating a website for myself for my craft projects. I'm actually pretty pleased with it. UPDATE: 2024.02.05 Not sure what I was talking about here or where I hosted it. Ummm...</p>
+    <hr>
     <h3>2023.10.13, Friday</h3>
     <p>Working on <a href="https://www.theodinproject.com/lessons/foundations-fundamentals-part-2">JS Fundamentals Part 2</a> today.</p>
     <p>I completed the lesson, but am a little frustrated. The coding, so far, is pretty self-explanatory. But it's a matter of knowing what you want the code to do, and that's where I'm lost. I will continue, because the lessons are helpful and producing results. But I'm still frustrated. Did the assignment on <a href="https://www.replit.com">replit.com</a>. Not really sure of the usage of that site, but I'm sure I'll find out.</p>
