Updated task list

--- a/pages/todo.html
+++ b/pages/todo.html
@@ -25,6 +25,12 @@
             <li>Recipe layouts (use flex)</li>
         </ul>
         <li>Review nav css in this site for improvements</li>
+        <li>Work through <a href="https://developer.chrome.com/docs/devtools/workspaces/">this exercise</a> on ChromeDevTools webiste</li>
+    </ul>
+    <p>This is my collection of tasks for learning more.</p>
+    <ul>
+        <li>Complete <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript">Dynamic client-side scripting course</a></li>
+        <li>Complete <a href="https://freeCodeCamp.org">freeCodeCamp</a> courses.</li>
     </ul>
     <a class="menu" href="../index.html">Back to Index</a>
 </body>
