--- a/pages/resources.html
+++ b/pages/resources.html
@@ -50,7 +50,19 @@
     <h2>JavaScript References</h2>
         <ul>
             <li><a href="https://www.javascript.info">JavaScript Info</a> - lessons on JavaScript</li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript">Dynamic client-side scriptiong</a> - JavaScript course</li>
         </ul>
+    <h2>Other Resources Worth Noting</h2>
+    <ul>
+        <li><a href="https://developer.chrome.com/docs/devtools/remote-debugging/">Remote debug Android</a> - instructions for setting up remote debugging on an Android device; this allows live testing of content, as opposed to just previewing in the browser developer tools</li>
+        <li><a href="https://developer.chrome.com/docs/devtools/javascript/">Debug JavaScript - Chrome for Developers</a> - the <a href="https://developer.chrome.com/docs/devtools/">whole site</a> is great info on using Chrome for development</li>
+        <li><a href="https://developer.chrome.com/docs/devtools/">Chrome DevTools</a></li>
+        <li><a href="https://www.appacademy.io">App Academy</a> - free coding classes</li>
+        <li><a href="https://www.shecodes.io">SheCodes</a> - free coding class for women</li>
+        <li><a href="https://www.freeCodeCamp.org">freeCodeCamp</a></li>
+        <li><a href="https://www.kahnacademy.com">Kahn Academy</a> - free coding classes</li>
+        <li>Coursera - free courses</li>
+    </ul>
     <h1>Other Project Sharing Services</h1>
     <p>Places to share source files, besides <a href="https://www.github.com">GitHub</a>.</p>
     <ul>
