Update practice page index

--- a/pages/practice.html
+++ b/pages/practice.html
@@ -14,8 +14,21 @@
             <a class="menu" href="todo.html">To Dos</a>
             <a class="menu" href="javascript.html">JavaScript Notes</a>
         </nav>
-    <h1>The Odin Project - Course Notes</h1>
-    <p>This is my collection of notes from completing <a href="https://www.theodinproject.com">The Odin Project</a> curriculum for software development.</p>
+    <h1>Index of Practice Pages for The Odin Project</h1>
+    <h2>HTML/CSS practice</h2>
+    <ul>
+        <li><a href="practice/boxmodel.html">The Box Model</a></li>
+        <li><a href="practice/cascade.html">Cascade Work</a></li>
+        <li><a href="practice/chain-selectors.html">Practicing Chain Selectors</a></li>
+        <li><a href="practice/css-methods.html">Basic CSS Methods</a></li>
+        <li><a href="practice/desc-combin.html">Combining elements</a></li>
+        <li><a href="practice/flexbox.html">Flexbox practice</a></li>
+    </ul>
+    <h2>JavaScript practice</h2>
+    <ul>
+        <li><a href="practice/function-scope.html">Function Scope</a></li>
+        <li><a href="practice/function-library.html">Function Library</a></li>
+    </ul>
     <a class="menu" href="../index.html">Back to Index</a>
 </body>
 </html>
