Add practice scripts & notes

--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -119,6 +119,22 @@ alert( `hello ${name}`);</pre>
     
     button.addEventListener("click", greet);</script>
 
+<div>
+    <input id="textBox" type="text" />
+<div id="output"></div>
+
+<script>
+    const textBox = document.querySelector("#textBox");
+const output = document.querySelector("#output");
+
+textBox.addEventListener("keydown", (event) => {
+  output.textContent = `You pressed "${event.key}".`;
+});
+
+</script>
+</div>
+
+
     <a class="menu" href="../index.html">Back to Index</a>
     </body>
 </html>
