Update practice page links

--- a/pages/practice.html
+++ b/pages/practice.html
@@ -23,11 +23,13 @@
         <li><a href="practice/css-methods.html">Basic CSS Methods</a></li>
         <li><a href="practice/desc-combin.html">Combining elements</a></li>
         <li><a href="practice/flexbox.html">Flexbox practice</a></li>
+        <li><a href="practice/template.html">Blank HTML template file</a></li>
     </ul>
     <h2>JavaScript practice</h2>
     <ul>
         <li><a href="practice/function-scope.html">Function Scope</a></li>
         <li><a href="practice/function-library.html">Function Library</a></li>
+        <li><a href="practice/function-practice.html">Blank HTML file for function practice</a> - following directions in <a href="https://www.theodinproject.com/lessons/foundations-fundamentals-part-3">The Odin Project - Fundamentals Part 3</a></li>
     </ul>
     <a class="menu" href="../index.html">Back to Index</a>
 </body>
