--- a/practice/function-library.html
+++ b/practice/function-library.html
@@ -50,6 +50,37 @@ input.addEventListener("change", () => {
   }
 });
 
+      //  function add7(number) {
+      //      const num1 = number
+      //      const num2 = 7;
+      //      const sum = num1 + num2;
+      //      console.log('The sum is ' + sum + '.');
+      //   }
+
+     /* function multiply(number) {
+        const num1 = number;
+        const num2 = num1 + 5;
+        const prod = num1 * num2;
+        console.log('The product of ' + num1 + ' and ' + num2 + ' is ' + prod + '.');
+      }*/
+
+/*      function capitalize(word) {
+        const myString = word;
+        const firstLetter = myString.charAt(0);
+        const firstLetterCap = firstLetter.toUpperCase();
+        const remaining = myString.slice(1);
+        const capitalizedWord = firstLetterCap + remaining;
+        console.log(capitalizedWord);
+      }
+      This script capitalizes the first letter of a string, but the function needs to be set off with text in ' ' single quotes for it to work.
+*/
+
+/*function lastLetter(string) {
+    const myString = string;
+    const lastLetter = myString.charAt(myString.length-1);
+    console.log("The last letter is " + lastLetter + ".")
+}*/
+
   </script>
 </body>
 </html>
