Updated todo & course log

--- a/pages/todo.html
+++ b/pages/todo.html
@@ -26,11 +26,12 @@
         </ul>
         <li>Review nav css in this site for improvements</li>
         <li>Work through <a href="https://developer.chrome.com/docs/devtools/workspaces/">this exercise</a> on ChromeDevTools webiste</li>
+        <li>Complete the Ruby on Rails course on The Odin Project.</li>
     </ul>
     <p>This is my collection of tasks for learning more.</p>
     <ul>
         <li>Complete <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript">Dynamic client-side scripting course</a></li>
-        <li>Complete <a href="https://freeCodeCamp.org">freeCodeCamp</a> courses.</li>
+        <li>Complete <a href="https://freeCodeCamp.org">freeCodeCamp</a> courses and certifications.</li>
     </ul>
     <a class="menu" href="../index.html">Back to Index</a>
 </body>
