--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -17,7 +17,7 @@
     <h1>My Odin Project Course Log</h1>
     <ul class="toc">
         <li>December 2023</li>
-        <li>January 2024</li>
+        <li><a href="#2024-02">February 2024</a></li>
         <li><a href="#2023-10">October 2023</a></li>
     </ul>
     <h2 id="2024-02">February 2024</h2>
