Update course log

--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -24,7 +24,7 @@
     <h3>2024.02.05, Monday</h3>
     <p>I got distracted for awhile. Tried to focus on another career path and it hasn't panned out. Continuing my progress on The Odin Project - <a href = "https://www.theodinproject.com/lessons/foundations-fundamentals-part-3">Fundamentals Part 3</a>.</p>
     <p>In the meantime, I did set up a Git-hosted TiddlyWiki for <a href = "https://mandi628.github.io/family-recipes">our family recipes</a>, and <a href = "https://mandi628.github.io/my-bullet-journal">a bullet journal</a>.</p>
-    <p>Working on <a href="https://www.theodinproject.com/lessons/foundations-problem-solving">The Odin Project - Problem Solving</a> lesson. Still in the Foundations part of the course, but it's ok. I'm almost done. There are 48 Foundations lessons, and I'm on 37. Then it's on to completing the JavaScript stack. If that goes well, I want to do the Ruby on Rails stack, too.</p>
+    <p>Working on <a href="https://www.theodinproject.com/lessons/foundations-problem-solving">The Odin Project - Problem Solving</a> lesson (see my notes on problem solving <a href="practice.html#prob-notes">here</a>). Still in the Foundations part of the course, but it's ok. I'm almost done. There are 48 Foundations lessons, and I'm on 37. Then it's on to completing the JavaScript stack. If that goes well, I want to do the Ruby on Rails stack, too.</p>
     <h2 id="2023-10">October 2023</h2>
     <h3>2023.10.14, Saturday</h3>
     <p>It was not in my plan today, but I ended up creating a website for myself for my craft projects. I'm actually pretty pleased with it. UPDATE: 2024.02.05 Not sure what I was talking about here or where I hosted it. Ummm...</p>
