--- a/pages/practice.html
+++ b/pages/practice.html
@@ -31,6 +31,71 @@
         <li><a href="practice/function-library.html">Function Library</a></li>
         <li><a href="practice/function-practice.html">Blank HTML file for function practice</a> - following directions in <a href="https://www.theodinproject.com/lessons/foundations-fundamentals-part-3">The Odin Project - Fundamentals Part 3</a></li>
     </ul>
+<h1 id="prob-notes">Problem Solving Notes</h1>
+<h4 style="text-align: center;">from <a href="https://www.theodinproject.com/lessons/foundations-problem-solving">The Odin Project - Problem Solving</a> Foundations Lesson</h2>
+<h4 style="text-align: center;"><a href="https://www.freecodecamp.org/news/how-to-think-like-a-programmer-lessons-in-problem-solving-d1d8bf1de7d2/">How to Think Like a Programmer</a>, by Richard Reis (freeCodeCamp.org)</h4>
+<h4 style="text-align: center;">Additional notes from <a href="https://www.amazon.com/Exercises-Programmers-Challenges-Develop-Coding/dp/1680501224">Exercises for Programmers</a>, by Brian Hogan</h2>
+<p>Three steps in solving a problem:</p>
+<ul>
+    <li><em>Understand the problem.</em> Write it down on paper, and rewrite it or draw diagrams until it makes sense to you. If you can explain it to someone else, then you understand it. If you don't have another person to explain it to, you can try <a href="https://en.wikipedia.org/wiki/Rubber_duck_debugging">Rubberducking</a>.</li>
+    <li><em>Plan the solution.</em> No matter what the problem is, you will waste time and energy just diving in. You need to have a plan. Here are some questions to consider at this stage:</li>
+    <ul>
+        <li>Does your program have a user interface? What will it look like? What functionality will the interface have? Sketch this out on paper.</li>
+        <li>What inputs will your program have? Will the user enter data or will you get input from somewhere else?</li>
+        <li>What’s the desired output?</li>
+        <li><b>Given your inputs, what are the steps necessary to return the desired output?</b> This is where you start writing the algorithims that solve the problem.</li>
+    </ul>
+    <li><em>Pseudocode (writing out the program in plain English).</em> This helps you slow down and think through each of the steps of the program.</li>
+    <li><em>Divide and conquer.</em> Now that the problem is broken up into smaller ones, you can tackle the simplest ones first. Some of the larger, more complex problems may need further analysis and break down, and that's ok. You may also have additional steps of connecting the subproblems, but you can do that at the end.</li>
+</ul>
+<p>If you are stuck, try the following:</p>
+<ul>
+    <li>Debug. Go through the solution line by line to see where the mistake is.</li>
+    <li>Reasses. Take a step back and look at it from another perspective. Is there anything that can be simplified?</li>
+    <li>Reboot. Another method of reassessing is starting over. Delete everything you did and start again.</li>
+    <li>Research. This is helpful to do even if you've solved the problem. You might find a better solution to the same problem.</li>
+    <li>Remember. Try to focus on the small problems, instead of the larger one.</li>
+</ul>
+<h4>Practice, Practice, Practice</h4>
+<p>There are lots of ways to practice problem solving, besides just solving code problems - chess puzzles, math problems, sudoku, Monopoly, Go, video-games, cryptokitties, etc.</p>
+<p>Here are some links for some practice problems:</p>
+<ul>
+    <li><a href="https://coderbyte.com/">Coderbytes</a> - daily coding challenges</li>
+    <li>Sudoku - I have a game on my phone and solve at least one a day. Try <a href="https://www.dailysudoku.com/sudoku/">here</a> and <a href="https://sudoku.com/challenges/daily-sudoku">here</a>.</li>
+<h3>Example 1: Fizz Buzz</h3>
+<p>The original problem is stated <a href="https://en.wikipedia.org/wiki/Fizz_buzz">here</a>. Using the steps outlined above, we can write a program for this.</p>
+<h4>Understanding the Problem</h4>
+<p>We want to write a code that will print the numbers 1 through x, where x is a number given by the user, replace numbers divisible evenly by 3 with "Fizz", numbers divisible evenly by 5 with "Buzz", and numbers evenly divisible by both 3 and 5 with "FizzBuzz".</p>
+<h4>Planning</h4>
+<p>For our current purposes, the program can be written in the console. The only user interaction is entering the number for the end of the string, which the user can enter from a pop-up box. The desired output is a list of numbers from 1 to the number entered by the user, where each number evenly divisible by 3 is replaced with "Fizz", each number evenly divisble by 5 is replaced with "Buzz", and each number evenly divisible by both (or 15) is replaced with "FizzBuzz".</p>
+<h4>Pseudocode</h4>
+<ol>
+    <li>When the user enters a number</li>
+    <li>Loop from 1 to the number entered by the user</li>
+    <li>If the number is divisible by 3, print "Fizz"</li>
+    <li>If the number is divisible by 5, print "Buzz"</li>
+    <li>If the number is divisible by 3 and 5, print "FizzBuzz"</li>
+    <li>Otherwise, print the number</li>
+</ol>
+<p>Be sure to open the console before clicking the button below.</p>
+<button class="menu" onclick="FizzBuzz()" style="display: inline; margin: 0 0 0 150px;">FizzBuzz</button>
+<script>
+    function FizzBuzz() {
+let answer = parseInt(prompt("Please enter the number you would like to FizzBuzz up to: "));
+for (let i = 1; i <= answer; i ++) {
+      if (i % 3 === 0 && i % 5 === 0) {
+             console.log("FizzBuzz");
+      } else if (i % 3 === 0) {
+            console.log("Fizz");
+         } else if (i % 5 === 0) {
+           console.log("Buzz");
+        } else {
+        console.log(i);
+     }
+    }
+    }
+</script>
+
     <a class="menu" href="../index.html">Back to Index</a>
 </body>
 </html>
