Add freeCodeCamp practice files

--- a/pages/practice.html
+++ b/pages/practice.html
@@ -31,6 +31,22 @@
         <li><a href="practice/function-library.html">Function Library</a></li>
         <li><a href="practice/function-practice.html">Blank HTML file for function practice</a> - following directions in <a href="https://www.theodinproject.com/lessons/foundations-fundamentals-part-3">The Odin Project - Fundamentals Part 3</a></li>
     </ul>
+    <h2>freeCodeCamp Projects</h2>
+    <p>These certifications are made up of many projects. All projects are copyrighted by <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>.</p>
+    <h3>Responsive Web Design</h3>
+    <ul>
+        <li><a href="practice/fcc_survey-form.html">Survey Form</a></li>
+        <ul>
+            <li><a href="practice/fcc_cat-photo-app.html">Cat Photo App</a></li>
+            <li><a href="practice/fcc_cafe-menu.html">Cafe Menu</a></li>
+            <li><a href="practice/fcc_colored-markers.html">Colored Markers</a></li>
+            <li><a href="practice/fcc_registration-form.html">Registration Form</a></li>
+        </ul>
+        <li>Tribute Page</li>
+        <li>Technical Documentation Page</li>
+        <li>Product Landing Page</li>
+        <li>Personal Portfolio Webpage</li>
+    </ul>
 <h1 id="prob-notes">Problem Solving Notes</h1>
 <h4 style="text-align: center;">from <a href="https://www.theodinproject.com/lessons/foundations-problem-solving">The Odin Project - Problem Solving</a> Foundations Lesson</h2>
 <h4 style="text-align: center;"><a href="https://www.freecodecamp.org/news/how-to-think-like-a-programmer-lessons-in-problem-solving-d1d8bf1de7d2/">How to Think Like a Programmer</a>, by Richard Reis (freeCodeCamp.org)</h4>
