Updated course progress

--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -21,6 +21,8 @@
         <li><a href="#2023-10">October 2023</a></li>
     </ul>
     <h2 id="2024-02">February 2024</h2>
+    <h3>2024.02.09, Friday</h3>
+    <p>I had planned to work on the next Odine Project lesson, but I ended up spending my time downloading the progress I've made on my freeCodeCamp Responsive Web Design projects instead. I would like to note here that, while I like the way The Odin Project lessons are compiled, it does not have project work, like freeCodeCamp. It's kind of frustrating, because freeCodeCamp just gives a series of steps, so you can't really understand the problem until you're done. The Odin Project gives all the technical information, without any practice. It would be nice if there was a complete course that does both, but I'm happy with what I'm doing and learning by completing both.</p>
     <h3>2024.02.05, Monday</h3>
     <p>I got distracted for awhile. Tried to focus on another career path and it hasn't panned out. Continuing my progress on The Odin Project - <a href = "https://www.theodinproject.com/lessons/foundations-fundamentals-part-3">Fundamentals Part 3</a>.</p>
     <p>In the meantime, I did set up a Git-hosted TiddlyWiki for <a href = "https://mandi628.github.io/family-recipes">our family recipes</a>, and <a href = "https://mandi628.github.io/my-bullet-journal">a bullet journal</a>.</p>
