Add links for practice files

--- a/pages/practice.html
+++ b/pages/practice.html
@@ -14,6 +14,7 @@
             <a class="menu" href="todo.html">To Dos</a>
             <a class="menu" href="javascript.html">JavaScript Notes</a>
         </nav>
+    <div style="border: 10px; margin: 0 auto; padding: 10px; width: 80%;">
     <h1>Index of Practice Pages for The Odin Project</h1>
     <h2>HTML/CSS practice</h2>
     <ul>
@@ -32,20 +33,39 @@
         <li><a href="practice/function-practice.html">Blank HTML file for function practice</a> - following directions in <a href="https://www.theodinproject.com/lessons/foundations-fundamentals-part-3">The Odin Project - Fundamentals Part 3</a></li>
     </ul>
     <h2>freeCodeCamp Projects</h2>
-    <p>These certifications are made up of many projects. All projects are copyrighted by <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>.</p>
+    <p>These certifications are made up of many projects. All projects are copyrighted by <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>. While my work is available in my account on the website, I wanted to save it locally if I ever need to reference my previous work.</p>
     <h3>Responsive Web Design</h3>
     <ul>
-        <li><a href="practice/fcc_survey-form.html">Survey Form</a></li>
+        <li><a href="../practice/fcc_survey-form.html">Survey Form</a></li>
         <ul>
-            <li><a href="practice/fcc_cat-photo-app.html">Cat Photo App</a></li>
-            <li><a href="practice/fcc_cafe-menu.html">Cafe Menu</a></li>
-            <li><a href="practice/fcc_colored-markers.html">Colored Markers</a></li>
-            <li><a href="practice/fcc_registration-form.html">Registration Form</a></li>
+            <li><a href="../practice/fcc_cat-photo-app.html">Cat Photo App</a></li>
+            <li><a href="../practice/fcc_cafe-menu.html">Cafe Menu</a></li>
+            <li><a href="../practice/fcc_colored-markers.html">Colored Markers</a></li>
+            <li><a href="../practice/fcc_registration-form.html">Registration Form</a></li>
         </ul>
         <li>Tribute Page</li>
+        <ul>
+            <li><a href="../practice/fcc_rothko-painting.html">CSS Box Model by Building a Rothko Painting</a></li>
+            <li><a href="../practice/fcc_flexbox-photo-gallery.html">CSS Flexbox Photo Gallery</a></li>
+            <li><a href="../practice/fcc_nutrition-label.html">Typography - Nutrition Label</a></li>
+            <li>Accessibility Building a Quiz</li>
+        </ul>
         <li>Technical Documentation Page</li>
+        <ul>
+            <li>CSS Pseudo Selectors Building a Balance Sheet</li>
+            <li>Intermediate CSS Building a Cat Painting</li>
+            <li>Responsive Web Desing Building a Piano</li>
+        </ul>
         <li>Product Landing Page</li>
+        <ul>
+            <li>CSS Variables Building a City Skyline</li>
+            <li>CSS Grid Building a Magazine</li>
+        </ul>
         <li>Personal Portfolio Webpage</li>
+        <ul>
+            <li>CSS Animation Building a Ferris Wheel</li>
+            <li>CSS Transforms Building a Penguin</li>
+        </ul>
     </ul>
 <h1 id="prob-notes">Problem Solving Notes</h1>
 <h4 style="text-align: center;">from <a href="https://www.theodinproject.com/lessons/foundations-problem-solving">The Odin Project - Problem Solving</a> Foundations Lesson</h2>
@@ -78,6 +98,7 @@
 <ul>
     <li><a href="https://coderbyte.com/">Coderbytes</a> - daily coding challenges</li>
     <li>Sudoku - I have a game on my phone and solve at least one a day. Try <a href="https://www.dailysudoku.com/sudoku/">here</a> and <a href="https://sudoku.com/challenges/daily-sudoku">here</a>.</li>
+</ul>
 <h3>Example 1: Fizz Buzz</h3>
 <p>The original problem is stated <a href="https://en.wikipedia.org/wiki/Fizz_buzz">here</a>. Using the steps outlined above, we can write a program for this.</p>
 <h4>Understanding the Problem</h4>
@@ -113,5 +134,6 @@ for (let i = 1; i <= answer; i ++) {
 </script>
 
     <a class="menu" href="../index.html">Back to Index</a>
+</div>
 </body>
 </html>
