--- a/pages/practice.html
+++ b/pages/practice.html
@@ -32,7 +32,7 @@
         <li><a href="practice/function-library.html">Function Library</a></li>
         <li><a href="practice/function-practice.html">Blank HTML file for function practice</a> - following directions in <a href="https://www.theodinproject.com/lessons/foundations-fundamentals-part-3">The Odin Project - Fundamentals Part 3</a></li>
     </ul>
-    <h2>freeCodeCamp Projects</h2>
+    <h2 id="fcc">freeCodeCamp Projects</h2>
     <p>These certifications are made up of many projects. All projects are copyrighted by <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>. While my work is available in my account on the website, I wanted to save it locally if I ever need to reference my previous work.</p>
     <h3>Responsive Web Design</h3>
     <ul>
