Add workspaces tutorial link

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -62,6 +62,7 @@
         <li><a href="https://www.freeCodeCamp.org">freeCodeCamp</a></li>
         <li><a href="https://www.kahnacademy.com">Kahn Academy</a> - free coding classes</li>
         <li>Coursera - free courses</li>
+        <li><a href="https://developer.chrome.com/docs/devtools/workspaces">Edit and save files in a workspace</a> - debugging with Chrome Developer Tools</li>
     </ul>
     <h1>Other Project Sharing Services</h1>
     <p>Places to share source files, besides <a href="https://www.github.com">GitHub</a>.</p>
