--- a/pages/practice.html
+++ b/pages/practice.html
@@ -18,19 +18,20 @@
     <h1>Index of Practice Pages for The Odin Project</h1>
     <h2>HTML/CSS practice</h2>
     <ul>
-        <li><a href="practice/boxmodel.html">The Box Model</a></li>
-        <li><a href="practice/cascade.html">Cascade Work</a></li>
-        <li><a href="practice/chain-selectors.html">Practicing Chain Selectors</a></li>
-        <li><a href="practice/css-methods.html">Basic CSS Methods</a></li>
-        <li><a href="practice/desc-combin.html">Combining elements</a></li>
-        <li><a href="practice/flexbox.html">Flexbox practice</a></li>
-        <li><a href="practice/template.html">Blank HTML template file</a></li>
+        <li><a href="../practice/boxmodel.html">The Box Model</a></li>
+        <li><a href="../practice/cascade.html">Cascade Work</a></li>
+        <li><a href="../practice/chain-selectors.html">Practicing Chain Selectors</a></li>
+        <li><a href="../practice/css-methods.html">Basic CSS Methods</a></li>
+        <li><a href="../practice/desc-combin.html">Combining elements</a></li>
+        <li><a href="../practice/flexbox.html">Flexbox practice</a></li>
+        <li><a href="../practice/template.html">Blank HTML template file</a></li>
     </ul>
     <h2>JavaScript practice</h2>
     <ul>
-        <li><a href="practice/function-scope.html">Function Scope</a></li>
-        <li><a href="practice/function-library.html">Function Library</a></li>
-        <li><a href="practice/function-practice.html">Blank HTML file for function practice</a> - following directions in <a href="https://www.theodinproject.com/lessons/foundations-fundamentals-part-3">The Odin Project - Fundamentals Part 3</a></li>
+        <li><a href="../practice/function-scope.html">Function Scope</a></li>
+        <li><a href="../practice/function-library.html">Function Library</a></li>
+        <li><a href="../practice/function-practice.html">Blank HTML file for function practice</a> - following directions in <a href="https://www.theodinproject.com/lessons/foundations-fundamentals-part-3">The Odin Project - Fundamentals Part 3</a></li>
+        <li><a href="../practice/number-game-errors.html">Number Game Errors</a> (The Odin Project - Understanding Errors assignment)</li>
     </ul>
     <h2 id="fcc">freeCodeCamp Projects</h2>
     <p>These certifications are made up of many projects. All projects are copyrighted by <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>. While my work is available in my account on the website, I wanted to save it locally if I ever need to reference my previous work.</p>
