Update log notes

--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -14,15 +14,28 @@
         <a class="menu" href="todo.html">To Dos</a>
         <a class="menu" href="javascript.html">JavaScript Notes</a>
     </nav>
+    <div style="margin: 0 auto; width: 80%">
     <h1>My Odin Project Course Log</h1>
     <ul class="toc">
-        <li>December 2023</li>
-        <li><a href="#2024-02">February 2024</a></li>
-        <li><a href="#2023-10">October 2023</a></li>
+        <li class="month"></li>
+        <li class="month"></li>
+        <li class="month"></li>
+        <li class="month"></li>
+        <li class="month">August 2024</li>
+        <li class="month">July 2024</li>
+    </ul>    <ul class="toc">
+        <li class="month">June 2024</li>
+        <li class="month">May 2024</li>
+        <li class="month">April 2024</li>
+        <li class="month">March 2024</li>
+        <li class="month"><a href="#2024-02">February 2024</a></li>
+        <li class="month"><a href="#2023-10">October 2023</a></li>
     </ul>
     <h2 id="2024-02">February 2024</h2>
     <h3>2024.02.09, Friday</h3>
-    <p>I had planned to work on the next Odine Project lesson, but I ended up spending my time downloading the progress I've made on my freeCodeCamp Responsive Web Design projects instead. I would like to note here that, while I like the way The Odin Project lessons are compiled, it does not have project work, like freeCodeCamp. It's kind of frustrating, because freeCodeCamp just gives a series of steps, so you can't really understand the problem until you're done. The Odin Project gives all the technical information, without any practice. It would be nice if there was a complete course that does both, but I'm happy with what I'm doing and learning by completing both.</p>
+    <p>I had planned to work on the next Odine Project lesson, but I ended up spending my time downloading the progress I've made on my <a href="practice.html#fcc">freeCodeCamp Responsive Web Design projects</a> instead. I would like to note here that, while I like the way The Odin Project lessons are compiled, it does not have project work, like freeCodeCamp. It's kind of frustrating, because freeCodeCamp just gives a series of steps, so you can't really understand the problem until you're done. The Odin Project gives all the technical information, without any practice. It would be nice if there was a complete course that does both, but I'm happy with what I'm doing and learning by completing both.</p>
+    <p>Completed <a href="https://www.theodinproject.com/lessons/foundations-understanding-errors">Understanding Errors</a> lesson, regarding error messages in JavaScript code. Did the <a href="../practice/number-game-errors.html">Number Game Errors</a> exercise. See comments in code for changes.</p>
+    <p>Moved on to the next lesson, which is a project to build a JavaScript <a href="https://www.theodinproject.com/lessons/foundations-rock-paper-scissors">Rock-Paper-Scissors game</a>. Currently stored on <a href="https://github.com/mandi628/rock-paper-scissors">GitHub</a>. This assignment is really hard. I feel like I don't know what commands I'm looking for or how to piece the algorithms together.</p>
     <h3>2024.02.05, Monday</h3>
     <p>I got distracted for awhile. Tried to focus on another career path and it hasn't panned out. Continuing my progress on The Odin Project - <a href = "https://www.theodinproject.com/lessons/foundations-fundamentals-part-3">Fundamentals Part 3</a>.</p>
     <p>In the meantime, I did set up a Git-hosted TiddlyWiki for <a href = "https://mandi628.github.io/family-recipes">our family recipes</a>, and <a href = "https://mandi628.github.io/my-bullet-journal">a bullet journal</a>.</p>
@@ -93,7 +106,7 @@
     </ul>
     <p>Completed the Recipe Website Project in the Fundamentals Course.</p>
     <p>Continued into CSS portion of curriculum. Need to stop, though. Been at it about 8 hours today. Just couldn't stop!</p>
-    <hr>
+</div>
     <a class="menu" href="../index.html">Back to Index</a>
     </body>
 </html>
