--- a/pages/course-log.html
+++ b/pages/course-log.html
@@ -16,10 +16,14 @@
     </nav>
     <h1>My Odin Project Course Log</h1>
     <ul class="toc">
-        <li>December 2023</li>
+        <li><a href="#2024-06">June 2024</a></li>
         <li><a href="#2024-02">February 2024</a></li>
         <li><a href="#2023-10">October 2023</a></li>
     </ul>
+    <h2 id="2024-06">June 2024</h2>
+    <h3>2024.06.10, Monday</h3>
+    <p>Got distracted again, but really it was derailment because I couldn't figure out how to complete the Rock, Paper, Scissors assignment in the Odin Project. Going to take a break and see if I can get a better understanding of JavaScript before I continue. The plan is to start with <a href="https://www.youtube.com/watch?v=PkZNo7MFNFg">freeCodeCamp's YouTube course</a>, then follow with their <a href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures/">JavaScript challenges</a>. We'll see if I can learn anything.</p>
+    <p>Also had problems with the TiddlyWiki software breaking down in my Git-hosted Family Recipes Tiddly, so I started a <a href="https://menu-medley.blogspot.com">blog</a> to collect the recipes. Now I just have to move everything from the TiddlyWiki over to there.</p>
     <h2 id="2024-02">February 2024</h2>
     <h3>2024.02.05, Monday</h3>
     <p>I got distracted for awhile. Tried to focus on another career path and it hasn't panned out. Continuing my progress on The Odin Project - <a href = "https://www.theodinproject.com/lessons/foundations-fundamentals-part-3">Fundamentals Part 3</a>.</p>
