--- a/pages/practice.html
+++ b/pages/practice.html
@@ -70,6 +70,7 @@
     <li>IF-THEN-ELSE a conditional statement changing the flow of the algorithm.</li>
     <li>CASE the generalization form of IF-THEN-ELSE.</li>
 </ol>
+<p>Read more <a href="https://builtin.com/data-science/pseudocode">here</a>.</p>
 
 <h3>Practice, Practice, Practice</h3>
 <p>There are lots of ways to practice problem solving, besides just solving code problems - chess puzzles, math problems, sudoku, Monopoly, Go, video-games, cryptokitties, etc.</p>
